<resources>
    <string name="app_name">Workout Customer</string>
    <string name="name">Workout Customer</string>
    <string name="logo">logo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="menu">menu</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_workout">Create Workout</string>
    <string name="next">Next</string>
    <string name="workout_title">Workout Title</string>
    <string name="workout_description">Workout Description</string>
    <string name="name_exercise">Name</string>
    <string name="time">Time</string>
    <string name="instruction">Instruction</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="will_exercise_be_for_time_or_for_repeat">Will exercise be for time or for repeat?</string>
    <string name="pause">Pause</string>
    <string name="series">Series</string>
    <string name="finish">Finish</string>
    <string name="exercise_details">Exercise Details</string>
    <string name="how_long_pause">How long pause</string>
    <string name="how_many_time">How long time</string>
    <string name="how_many_series">How many series</string>
    <string name="repeat">Repeat</string>
    <string name="how_many_repeat">how many repeat</string>
    <string name="workout_tiitle">Workout Title</string>
    <string name="start">Start</string>
    <string name="delete">Delete</string>
    <string name="title_exercise">Title Exercise</string>
    <string name="time_to_end">TIme to end :</string>
    <string name="time_to_end_pause">Time to end pause:</string>
    <string name="plus">+</string>
    <string name="history">History</string>
    <string name="workout">Workout</string>
    <string name="settings">Settings</string>
    <string name="description2">Description :</string>
    <string name="instruction2">Instruction :</string>
    <string name="series2">Series :</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="pause2">Pause :</string>
    <string name="time2">Time :</string>
    <string name="coming_soon">Coming Soon!</string>
    <string name="about_me">About Me:</string>
    <string name="my_name_is_mateusz_i_am_student_who_in_free_time_learn_programming_i_hope_you_like_my_app_if_so_you_can_give_positive_rating_and_feedback_i_am_open_to_change_in_my_app">
        My name is Mateusz. I am student who in free time learn programming. I hope you like my app. If so you can give
        positive rating and feedback. I am open to change in my app.
    </string>
    <string name="license">License:</string>
    <string name="gnu_general_public_license_v3_0_nmore_information_https_github_com_mati2251_workoutcustomer_blob_master_license">
        GNU General Public License v3.0. More Information:
        https://github.com/mati2251/WorkoutCustomer/blob/master/LICENSE
    </string>
    <string name="source_code">Source code:</string>
    <string name="https_github_com_mati2251_workoutcustomer">https://github.com/mati2251/WorkoutCustomer</string>
    <string name="next_exercise">Next exercise:</string>
    <string-array name="time_formats">
        <item>seconds</item>
        <item>minutes</item>
    </string-array>
</resources>
