<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".creator.TimeActivity">
    <Spinner
            android:id="@+id/pauseMenu"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            style="@style/TextViewCreator"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/pause_time"
            app:layout_constraintBottom_toBottomOf="@+id/pause_time"/>
    <TextView
            android:text="@string/exercise_details"
            android:layout_width="175dp"
            android:layout_height="43dp"
            android:id="@+id/textView15" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            style="@style/TextViewCreator"/>
    <TextView
            android:text="@string/series"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_marginTop="136dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            style="@style/TextViewCreator"/>
    <TextView
            android:text="@string/time"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            style="@style/TextViewCreator" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView
            android:text="@string/pause"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            style="@style/TextViewCreator" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/series_time"
            app:layout_constraintStart_toEndOf="@+id/textView2" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            android:background="@null" android:hint="@string/how_many_series" android:importantForAutofill="no"
            tools:targetApi="o" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/time"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            android:background="@null" android:hint="@string/how_many_time" android:autofillHints=""
            tools:targetApi="o" app:layout_constraintEnd_toStartOf="@+id/timeMenu" android:textSize="18sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/pause_time"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" android:layout_marginStart="16dp"
            android:background="@null" android:hint="@string/how_long_pause" android:importantForAutofill="no"
            tools:targetApi="o" app:layout_constraintEnd_toStartOf="@+id/pauseMenu" android:textSize="18sp"/>
    <android.support.constraint.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                      android:id="@+id/group" app:layout_constraintTop_toTopOf="parent"
                                      app:layout_constraintStart_toStartOf="parent"
                                      app:layout_constraintEnd_toStartOf="parent"
                                      app:layout_constraintBottom_toTopOf="parent"/>
    <Spinner
            android:id="@+id/timeMenu"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="@+id/time"
            app:layout_constraintBottom_toBottomOf="@+id/time"
            style="@style/TextViewCreator"
            app:layout_constraintVertical_bias="0.0"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="404dp"
            android:layout_height="51dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
        <Button
                android:text="@string/finish"
                android:layout_weight=".5"
                android:id="@+id/button3"
                android:onClick="finish"
                style="@style/ButtonCreator"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
        />
        <Button
                android:text="@string/next"
                android:layout_weight=".5"
                android:id="@+id/button"
                android:onClick="addExercise"
                style="@style/ButtonCreator"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>