<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".viewer.ViewActivity">
    <TextView
            android:text="@string/workout_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/workout_description_view_activity" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.501"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/workout_title_view_activity" android:textAlignment="viewStart"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/workout_tiitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/workout_title_view_activity" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/TextViewCreator" android:textAlignment="center" android:textSize="36sp"/>
    <Button
            android:text="@string/start"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:id="@+id/start_activity" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/workout_description_view_activity"
            android:onClick="start"
            style="@style/ButtonCreator"/>
    <Button
            android:text="@string/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/workout_description_view_activity"
            style="@style/ButtonCreator" app:layout_constraintStart_toEndOf="@+id/start_activity"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/recycle_view_exercise"/>
</android.support.constraint.ConstraintLayout>