<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".viewer.RepeatViewerActivity">

    <TextView
            android:text="@string/title_exercise"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView9"
            style="@style/TextViewCreator" android:layout_width="180dp"/>
    <TextView
            android:text="@string/description"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView10"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/instruction"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView11"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>
    <TextView
            android:text="@string/series"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView12"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11"/>
    <TextView
            android:text="@string/repeat"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView8"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/title_repeat_viewer" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/description_repeat_viewer"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/instruction_repeat_viewer"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView11"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/series_repeat_viewer"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/repeat_viewer"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            style="@style/TextViewCreator"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button6" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:onClick="pause"
            style="@style/ButtonCreator"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currentSeries2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="77dp" app:layout_constraintBottom_toTopOf="@+id/button6"
            style="@style/TextViewCreator" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/repeat_viewer" app:layout_constraintVertical_bias="0.23000002"/>
</android.support.constraint.ConstraintLayout>