<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".viewer.ExerciseViewActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseTitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            style="@style/TextViewCreator" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            android:text="@string/description2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/exerciseTitle"/>
    <TextView
            android:text="@string/instruction2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            style="@style/TextViewCreator"/>
    <TextView
            android:text="@string/series2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView19"
            style="@style/TextViewCreator"/>
    <TextView
            android:text="@string/time2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:id="@+id/timeOrRepeat"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView21"
            style="@style/TextViewCreator"/>
    <TextView
            android:text="@string/pause2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView25"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/timeOrRepeat"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:id="@+id/descriptionExercise" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            style="@style/TextViewCreator" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/exerciseTitle"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/instructionExercise" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionExercise"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/seriesExercise" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/instructionExercise"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/timeOrRepeatOutput" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/seriesExercise"
            style="@style/TextViewCreator"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pauseExercise" app:layout_constraintStart_toEndOf="@+id/textView17"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/timeOrRepeatOutput"
            style="@style/TextViewCreator"/>
    <Button
            android:text="@string/delete_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/pauseExercise"
            app:layout_constraintHorizontal_bias="1.0"
            style="@style/ButtonCreator"
            android:padding="5dp"
    />
</android.support.constraint.ConstraintLayout>